examples/test/testpolicy5405.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5405
  namespace: namespace18
spec:
  podSelector:
    matchLabels:
      key34: value49
      key4: value13
      key6: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value1
          key46: value4
          key25: value38
      podSelector:
        matchLabels:
          key9: value4
